# VirtualizedFilesLibrary

./: CMakeLists.txt
include/: ArrowReader.hpp  Statistics.hpp  VirtualFile.hpp
include/parquet/: ColumnChunkWriter.hpp  ParquetUtils.hpp  VirtualParquetFile.hpp
test/: test.cpp
test/data/: simple.json
